--- a/templates/word_result.html
+++ b/templates/word_result.html
@@ -6,6 +6,6 @@
         <meta name="description" content="長さを計算">
     </head>
     <body>
-        {{len(reason)}}
+        {{reason|length}}
     </body>
 </html>
